gitops/apps/chihiro/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chihiro
  labels:
    probe: enabled
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "chihiro.bealv.io"
  rules:
    - backendRefs:
        - group: gateway.kgateway.dev
          kind: Backend
          name: chihiro
      # filters:
      #   - type: URLRewrite
      #     urlRewrite:
      #       hostname: chihiro.bealv-mgmt.lan
      #   - type: RequestHeaderModifier
      #     requestHeaderModifier:
      #       add:
      #         - name: Connection
      #           value: 'Upgrade'
      #         - name: Upgrade
      #           value: 'websocket'
