gitops/apps/chihiro/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chihiro
  annotations:
    cert-manager.io/cluster-issuer: bealvio
    external-dns.alpha.kubernetes.io/target: bealv.io
    projectcontour.io/websocket-routes: /ws
  labels:
    probe: enabled
spec:
  ingressClassName: external
  rules:
    - host: 'chihiro.bealv.io'
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: chihiro
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chihiro
                port:
                  number: 8080
  tls:
    - hosts:
        - 'chihiro.bealv.io'
      secretName: chihiro-tls
